# libindic-utils

./: .gitignore  .travis.yml  AUTHORS  Makefile  README.md  README.rst  setup.cfg  setup.py
common/: __init__.py  core.py
libindic/utils/: __init__.py
libindic/utils/tests/: test_charmap.py  test_langdetect.py
silpa_common/: __init__.py  charmap.py  langdetect.py
tests/: test_charmap.py  test_langdetect.py  test_libindic_utils.py
