[metadata]
name = silpa_common
author = SILPA Developers
author-email = silpa-discuss@nongnu.org
summary = Common functions for SILPA and related modules
license = LGPL-2.1+
description-file =
  README.md
home-page = https://silpa.org.in
requires-python = >= 2.7
classifier =
  Development Status :: 4-Beta
  License :: DFSG Approved
  License :: OSI Approved :: GNU Lesser General Public License V2 or later
  Operating System :: OS Independent
  Intended Audience :: Developer
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
packages =
  silpa_common