[metadata]
name = silpa_common
author = SILPA Developers
author-email = silpa-discuss@nongnu.org
summary = Common functions for SILPA and related modules
license = LGPL-2.1+
description-file =
  README.md
home-page = https://silpa.org.in
requires-python = >= 2.7
classifier =
  Development Status :: 4 - Beta
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
packages =
  silpa_common