[metadata]
name = libindic-utils
author = SILPA Developers
author-email = silpa-discuss@nongnu.org
license = LGPL-2.1+
description-file =
description = Common functions for libindic and related modules
long_description = file: README.rst
home-page = https://libindic.org
requires-python = >= 3.0
classifier =
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

